--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    implementation 'com.madgag:animated-gif-lib:1.4'
 }
