--- a/build.gradle
+++ b/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.madgag:animated-gif-lib:1.4'
     
     implementation 'org.apache.commons:commons-csv:1.4'
+    
+    implementation 'com.gitee.l0km:nanohttpd:2.3.4'
 }
