--- a/build.gradle
+++ b/build.gradle
@@ -38,16 +38,16 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.guava:guava:31.0.1-jre'
     
-    implementation 'org.jfree:jfreechart:1.5.2'
+    implementation 'org.jfree:jfreechart:1.5.3'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
     implementation 'com.madgag:animated-gif-lib:1.4'
     
-    implementation 'org.apache.commons:commons-csv:1.4'
+    implementation 'org.apache.commons:commons-csv:1.9.0'
     
-    implementation 'com.gitee.l0km:nanohttpd:2.3.4'
+    // implementation 'com.gitee.l0km:nanohttpd:2.3.4'
 }
