--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.10.0'
     
     // implementation 'com.gitee.l0km:nanohttpd:2.3.4'
+    
+    // https://search.maven.org/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
